--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@alan-ai/alan-sdk-web": "1.8.34",
-    "@emotion/react": "11.10.0",
-    "@emotion/styled": "11.10.0",
-    "@mui/icons-material": "5.8.4",
-    "@mui/material": "5.10.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "@mui/styles": "5.9.3",
     "@reduxjs/toolkit": "1.8.4",
     "axios": "0.27.2",
