--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
     "@mui/material": "^5.10.0",
     "@mui/styles": "5.9.3",
     "@reduxjs/toolkit": "1.8.4",
-    "axios": "0.27.2",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
-
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
